kubernetes/apps/traefik-websockets.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: websockets
  namespace: apps
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: timeout
  namespace: apps
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "SAMEORIGIN"
