kubernetes/apps/infrastructure-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infrastructure-router
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`router.woitzik.dev`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: external-router
          port: 443
          scheme: https
          serversTransport: insecure-transport@kubernetescrd
  tls:
    secretName: wildcard-woitzik-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infrastructure-pve
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve.woitzik.dev`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: external-pve
          port: 8006
          scheme: https
          serversTransport: insecure-transport@kubernetescrd
  tls:
    secretName: wildcard-woitzik-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infrastructure-pbs
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backup.woitzik.dev`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: external-pbs
          port: 8007
          scheme: https
          serversTransport: insecure-transport@kubernetescrd
  tls:
    secretName: wildcard-woitzik-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infrastructure-dns
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.woitzik.dev`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: external-dns
          port: 3001
          scheme: http
  tls:
    secretName: wildcard-woitzik-dev-tls
